feat: bundle frontend into Spring Boot JAR for single-service deployment
- frontend-maven-plugin in pom.xml: downloads Node v20, runs npm install + npm run build during mvn package
- vite.config.js: build.outDir points to backend/src/main/resources/static
- SpaController.java: forwards React Router paths to index.html
- CorsConfig.java: simplified to localhost-only (prod is same-origin, no CORS needed)
- .gitignore: exclude generated static/ folder