@@ -1,28 +1,32 @@
 package com.gymtracker.config;
 
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
 import java.util.List;
 
+/**
+ * CORS is only relevant for local development where the Vite dev server
+ * (localhost:5173) calls the Spring Boot API (localhost:8080).
+ *
+ * In production, the frontend is bundled inside the JAR and served at
+ * the same origin as the API — so no CORS headers are needed there.
+ */
 @Configuration
 public class CorsConfig {
-
-    // Comma-separated list of allowed origins, e.g.:
-    // "http://localhost:5173,https://gym-tracker.vercel.app"
-    @Value("${ALLOWED_ORIGINS:http://localhost:5173,http://localhost:3000}")
-    private String allowedOrigins;
 
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        config.setAllowedOriginPatterns(Arrays.asList(allowedOrigins.split(",")));
+        config.setAllowedOriginPatterns(List.of(
+                "http://localhost:5173",
+                "http://localhost:3000",
+                "http://localhost:8080"
+        ));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         config.setExposedHeaders(List.of("Authorization"));
